// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<SelectButton
  currency="CZK"
  increment={[Function]}
  price={100}
/>
`;

exports[`renders as expected 2`] = `
<IncrementDecrement
  currency="CZK"
  decrement={[Function]}
  increment={[Function]}
  price={100}
  selectableCount={2}
  selectedCount={1}
/>
`;

exports[`renders as expected 3`] = `
<IncrementDecrement
  currency="CZK"
  decrement={[Function]}
  increment={[Function]}
  price={100}
  selectableCount={2}
  selectedCount={2}
/>
`;
